# agent-core

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  FEISHU_HCR_REDESIGN_R1_AUDIT_REPORT.md  README.md  SECURITY.md  canary-runtime  package-lock.json  package.json  pnpm-lock.yaml
crates/agent-core-protocol/: Cargo.toml
crates/agent-core-protocol/src/: digest.rs  lib.rs  refs.rs  result.rs  version.rs
docs/: agent-dispatch.md  architecture-rfc.md  bootstrap-prompt-migration.md  connector-extraction-checklist.md  current-goal.md  design-doc.html  design-review.html  engineering-constraints.md  evolution-harness.md  external-audit-harness.md  harness-acceptance-runbook.md  milestones.md  operating-guide.md  phase0-plan.md  product-roadmap.md  release-checklist.md  replay-eval-harness.md  repository-governance.md  requirements.md
examples/: calculator.rs  grant-time-now.md  time_harness.rs
migrations/: 0001_init.sql  0002_registry_snapshots.sql  0003_external_harness_hotload.sql  0003_harness_control_plane.sql  0004_capability_change_proposals.sql  0005_remove_manifest_operation_name_unique.sql  0006_external_operation_grants.sql  0007_harness_change_requests.sql  0008_hcr_claims.sql  0009_hcr_evidence.sql  0010_hcr_receipt_identity.sql  0011_capability_proposal_hcr_links.sql  0012_capability_change_approvals.sql  0013_component_registry.sql  0014_external_receipt_envelope_digests.sql  0015_delivery_manifest_columns.sql
scripts/: check-kernel-negative-boundary.sh  check-local-secret-leaks.mjs  check-no-kernel-dep.sh  check-no-root-reports.sh  check-orchestration-no-product-facts.sh  check-structure.mjs
src/: config.rs  context.rs  contract_catalog.rs  (+5 more)
tools/capability-host/: Cargo.toml
tools/capability-host/src/: artifact.rs  config.rs  deployment.rs  lib.rs  main.rs  process.rs  protocol.rs  server.rs  upstream.rs
tools/capability-host/src/deployment/: state.rs
tools/capability-host/tests/: artifact_security_tests.rs  deployment_tests.rs  integration.rs  safety_tests.rs  server_hardening_tests.rs
tools/capability-host/tests/common/: mod.rs
tools/coding-harness/: Cargo.toml  build.rs
tools/coding-harness/examples/: coding-config-with-harnesses.json  gen_manifests.rs  harness.manifest.example.json
tools/coding-harness/scripts/: init-harness-workspace.sh  scaffold-context-harness.sh  smoke-context-harness.mjs
tools/coding-harness/src/: calculator_generator.rs  capability.rs  config.rs  lib.rs  main.rs  opencode_backend.rs  operation_specs.rs  paths.rs  server.rs  tasks.rs  workspace.rs
tools/coding-harness/src/fixtures/: calculator.rs  hook_consumer.rs  mod.rs
tools/coding-harness/src/hcr/: acceptance.rs  candidate.rs  command.rs  errors.rs  executor.rs  manifest_builder.rs  mod.rs  process.rs  profile.rs  sandbox.rs  sandbox_tests.rs
tools/coding-harness/src/hcr/acceptance/: execution_store.rs  mod.rs  protocol.rs  verification_receipt.rs
tools/coding-harness/src/hcr/gates/: artifact.rs  build.rs  mod.rs  runner.rs  scaffold.rs  trusted_smoke.rs  trusted_test.rs
tools/coding-harness/src/hcr/manifest_builder/: delivery.rs  delivery_manifest.rs  invocable_manifest.rs  mod.rs  service_manifest.rs  tests.rs  version_allocation.rs  version_query.rs
tools/coding-harness/src/self_evolution/: acceptance_selector.rs  artifact_manifest.rs  component_profile.rs  mod.rs
tools/coding-harness/src/self_evolution/acceptance_kit/: failure_event_viewer.rs  failure_viewer_query.rs  mod.rs  shared_verifier_engine.rs  token_dashboard.rs
tools/coding-harness/src/self_evolution/acceptance_kit/token_dashboard/: mod.rs  private_verifier.rs  public_spec.rs
tools/coding-harness/src/self_evolution/generator/: hook_consumer.rs  invocable.rs  mod.rs  model.rs
tools/coding-harness/src/self_evolution/generator/hook_consumer/: cache.rs  contract.rs  tests.rs
tools/coding-harness/src/self_evolution/generator/invocable/: cache.rs  source.rs  tests.rs
tools/coding-harness/src/self_evolution/generator/model/: client.rs  retry.rs  tests.rs
tools/coding-harness/templates/context-prepare-harness/: README.md.template  harness.manifest.json.template  package.json.template  server.mjs.template  server.test.mjs.template
tools/coding-harness/templates/hook-consumer-service/: Cargo.lock.template  Cargo.toml.template  main.rs.template  support.rs.template
tools/coding-harness/templates/invocable-capability/: main.rs.template
tools/coding-harness/tests/: calculator_gates_e2e.rs  calculator_helpers.rs  calculator_vertical_e2e.rs  capability_e2e.rs  capability_host_e2e.rs  fixture_production_isolation.rs  harness_integration.rs  harness_scaffold.rs  harness_smoke_runner.rs  harness_workspace_bootstrap.rs  hcr_command_policy.rs  hcr_compatibility.rs  hcr_environment.rs  hcr_lifecycle.rs  hcr_network.rs  hcr_sandbox.rs  hook_consumer_gates_e2e.rs  manifest_builder_tests.rs  opencode_smoke.rs  pr3a_real_coding_e2e.rs  pr3b_north_star_e2e.rs  process_lifecycle.rs  schema_tests.rs
tools/coding-harness/tests/fixtures/: calculator_process.rs  calculator_server.rs  calculator_trusted_test.rs  event_observe_trusted_test.rs  hook_consumer_contract_trusted_test.rs
tools/coding-harness/tests/fixtures/calculator_candidate/: manifest.json
tools/coding-harness/tests/fixtures/calculator_candidate/src/: main.rs
tools/coding-harness/tests/fixtures/calculator_candidate_wrong_multiply/: Cargo.toml  manifest.json
tools/coding-harness/tests/fixtures/calculator_candidate_wrong_multiply/src/: main.rs
tools/coding-harness/tests/fixtures/calculator_cargo/: Cargo.toml
tools/coding-harness/tests/generator/: generic_generator_live.rs
tools/coding-harness/tests/pr3b_north_star/: model_stub.rs  support.rs
tools/deployment-harness/: Cargo.toml  README.md
tools/deployment-harness/src/: config.rs  lib.rs  main.rs  manager.rs  process.rs  server.rs
tools/deployment-harness/tests/: lifecycle.rs
tools/development-controller/: Cargo.toml
tools/development-controller/src/: lib.rs  main.rs  server.rs
tools/shadow-failure-proxy/: Cargo.toml
tools/shadow-failure-proxy/src/: main.rs
(+382 files in other folders)
