[package]
name = "agent-core-protocol"
version = "0.1.0"
edition = "2021"

description = """
Stable DTO boundary for the Agent Core External Orchestration Seam.

This crate intentionally has NO dependency on `agent-core-kernel`. It holds
only the generic governance DTOs the Kernel and an external Development
Controller exchange across the seam: protocol version, invocation/run/principal
refs, opaque content refs, SHA-256 digests, and the ExternalOrchestrationIntent
/ ExternalOrchestrationResult pair. Nothing product-specific lives here.
"""

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
