[package]
name = "coding-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core-kernel = { path = "../.." }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "3.3.0", features = ["json"] }
libc = "0.2"

[[bin]]
name = "calculator-artifact"
path = "src/bin/calculator.rs"

[dev-dependencies]
capability-host = { path = "../capability-host" }
