[package]
name = "coding-harness"
version = "0.1.0"
edition = "2021"

[features]
test-fixtures = []

[dependencies]
agent-core-kernel = { path = "../.." }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "2", features = ["full", "visit"] }
ureq = { version = "3.3.0", features = ["json"] }
libc = "0.2"
fs2 = "0.4.3"

[[bin]]
name = "calculator-artifact"
path = "src/bin/calculator.rs"

[[test]]
name = "generic_generator_live"
path = "tests/generator/generic_generator_live.rs"

[dev-dependencies]
capability-host = { path = "../capability-host" }
