[package]
name = "deployment-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core-kernel = { path = "../.." }
anyhow = "1"
chrono = "0.4"
fs2 = "0.4"
hex = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "deployment-fixture-service"
path = "src/bin/fixture_service.rs"

[[bin]]
name = "deployment-fixture-service-v2"
path = "src/bin/fixture_service.rs"

[profile.dev]
debug = 0
strip = "symbols"
